TestJuego para ronda normal y de empate